tests/blackhole/sfpi/gold/warn_spill.txt
In file included from /home/nathan/gcc-12/sfpi/include/sfpi.h:1251,
                 from test.h:17,
                 from warn.cc:11:
In member function 'void sfpi::vFloat::loadf(float)',
    inlined from 'sfpi::vFloat::vFloat(float)' at /home/nathan/gcc-12/sfpi/include/sfpi.h:364:46,
    inlined from 'void spill()' at warn.cc:141:16:
/home/nathan/gcc-12/sfpi/include/blackhole/sfpi_imp.h:105:11: fatal error: cannot store sfpu register (register spill)
  105 |     assign(__builtin_rvtt_sfpxloadi(SFPXLOADI_MOD0_FLOAT, __f32asui(val)));
      |     ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
